# CMAKE_CONFIG

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
